--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body {
-  
+  height: 95vh;
+  width: 95;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: rgb(196, 11, 196);
+  font-family: 'Lucida Sans', sans-serif;
 }
